[package]
name = "onechain"
version = "1.0.0"
edition = "2021"
authors = ["Anirudh Vyas <ricky.nj@gmail.com>"]
description = "Onechain is a blockchain library for building simple, utterly simple blockchains."
license = "MIT"
repository = "https://github.com/goldilocksfashion/onechain"
documentation = "https://docs.rs/dripp_backend"
homepage = "https://github.com/goldilocksfashion/onechain"
keywords = ["p2p", "networking", "blochchain", "blockchain", "crypto", "cryptocurrency", "decentralized", "distributed"]
categories = ["network-programming", "data-structures", "peer-to-peer"]

[lib]
name = "onechain"
crate-type = ["lib","staticlib", "cdylib"]

[features]
logging = []

[dependencies]
## Identity
libc = "0.2.169"
memoffset = "0.9.1"
log = "0.4.25"
simplelog = "0.12.2"
uuid = "1.12.1"
chrono = "0.4.39"
ssi = "0.10.2"  
sha2 ="0.10.8"
bincode = "1.3.3"
ed25519-dalek = "2.1.1" 
## Networking
iroh = "0.31.0"
## Core
derive_builder = "0.20.2"
thiserror = "2.0.11"
tokio = { version = "1.10.0", features = ["rt", "rt-multi-thread", "io-util", "time", "sync"] }


## Optional
tracing = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.6.0" 

[profile.release]
strip = "symbols" # Strip unnecessary symbols during build
opt-level = "z" 
lto = true
panic = "abort" # Abort on panic